0.6.8/io.gladed.watchable/index.md
[io.gladed.watchable](./index.md)

## Package io.gladed.watchable

### Types

| Name | Summary |
|---|---|
| [Change](-change.md) | `interface Change`<br>An object that describes a change. |
| [GroupChange](-group-change/index.md) | `data class GroupChange : `[`Change`](-change.md)<br>A change to a single watchable in a group. |
| [HasSimpleChange](-has-simple-change/index.md) | `interface HasSimpleChange<out S> : `[`Change`](-change.md)<br>A [Change](-change.md) that can be expressed in terms of simpler change objects of type [S](-has-simple-change/index.md#S). |
| [ListChange](-list-change/index.md) | `sealed class ListChange<T> : `[`HasSimpleChange`](-has-simple-change/index.md)`<`[`ListChange.Simple`](-list-change/-simple/index.md)`<`[`T`](-list-change/index.md#T)`>>`<br>Describes a change to a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html). |
| [MapChange](-map-change/index.md) | `sealed class MapChange<K, V> : `[`HasSimpleChange`](-has-simple-change/index.md)`<`[`MapChange.Simple`](-map-change/-simple/index.md)`<`[`K`](-map-change/index.md#K)`, `[`V`](-map-change/index.md#V)`>>`<br>Describes a change to a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html). |
| [Mergeable](-mergeable/index.md) | `interface Mergeable<T>` |
| [MutableValue](-mutable-value/index.md) | `interface MutableValue<T> : `[`Value`](-value/index.md)`<`[`T`](-mutable-value/index.md#T)`>`<br>A container for a value that can be changed. |
| [MutableWatchable](-mutable-watchable/index.md) | `interface MutableWatchable<M, C : `[`Change`](-change.md)`> : `[`Watchable`](-watchable/index.md)`<`[`C`](-mutable-watchable/index.md#C)`>`<br>A [Watchable](-watchable/index.md) containing a mutable object of type [M](-mutable-watchable/index.md#M), which can both generate and accept changes of type [C](-mutable-watchable/index.md#C). |
| [MutableWatchableBase](-mutable-watchable-base/index.md) | `abstract class MutableWatchableBase<T, V, M : `[`T`](-mutable-watchable-base/index.md#T)`, C : `[`Change`](-change.md)`> : `[`WatchableBase`](-watchable-base/index.md)`<`[`C`](-mutable-watchable-base/index.md#C)`>, `[`MutableWatchable`](-mutable-watchable/index.md)`<`[`M`](-mutable-watchable-base/index.md#M)`, `[`C`](-mutable-watchable-base/index.md#C)`>`<br>Base for implementing a type that is watchable, mutable, and bindable. |
| [Period](-period/index.md) | `object Period`<br>Defines special values for watcher timing. |
| [ReadOnlyWatchableList](-read-only-watchable-list.md) | `interface ReadOnlyWatchableList<T> : `[`SimpleWatchable`](-simple-watchable/index.md)`<`[`ListChange.Simple`](-list-change/-simple/index.md)`<`[`T`](-read-only-watchable-list.md#T)`>, `[`ListChange`](-list-change/index.md)`<`[`T`](-read-only-watchable-list.md#T)`>>, `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-read-only-watchable-list.md#T)`>`<br>A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) which may not be modified by the reference holder. |
| [ReadOnlyWatchableMap](-read-only-watchable-map.md) | `interface ReadOnlyWatchableMap<K, V> : `[`SimpleWatchable`](-simple-watchable/index.md)`<`[`MapChange.Simple`](-map-change/-simple/index.md)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>, `[`MapChange`](-map-change/index.md)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>>, `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>`<br>A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may not be modified by the reference holder. |
| [ReadOnlyWatchableSet](-read-only-watchable-set.md) | `interface ReadOnlyWatchableSet<T> : `[`SimpleWatchable`](-simple-watchable/index.md)`<`[`SetChange.Simple`](-set-change/-simple/index.md)`<`[`T`](-read-only-watchable-set.md#T)`>, `[`SetChange`](-set-change/index.md)`<`[`T`](-read-only-watchable-set.md#T)`>>, `[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-read-only-watchable-set.md#T)`>`<br>A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may not be modified by the reference holder. |
| [ReadOnlyWatchableValue](-read-only-watchable-value/index.md) | `interface ReadOnlyWatchableValue<T> : `[`Watchable`](-watchable/index.md)`<`[`ValueChange`](-value-change/index.md)`<`[`T`](-read-only-watchable-value/index.md#T)`>>`<br>A [Watchable](-watchable/index.md) value of type [T](-read-only-watchable-value/index.md#T) which may not be replaced by the reference holder. |
| [SetChange](-set-change/index.md) | `sealed class SetChange<T> : `[`HasSimpleChange`](-has-simple-change/index.md)`<`[`SetChange.Simple`](-set-change/-simple/index.md)`<`[`T`](-set-change/index.md#T)`>>`<br>Describes a change to a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html). |
| [SimpleWatchable](-simple-watchable/index.md) | `interface SimpleWatchable<S, C : `[`HasSimpleChange`](-has-simple-change/index.md)`<`[`S`](-simple-watchable/index.md#S)`>> : `[`Watchable`](-watchable/index.md)`<`[`C`](-simple-watchable/index.md#C)`>`<br>A [Watchable](-watchable/index.md) that allows for a more verbose series of simpler changes. |
| [TestContextWrapper](-test-context-wrapper/index.md) | `class TestContextWrapper : `[`Element`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/-element/index.html)<br>A wrapper for [testContext](-test-context-wrapper/test-context.md) so that it can be added into a [CoroutineContext](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html). |
| [Value](-value/index.md) | `interface Value<T>`<br>A read-only wrapper for a value of [T](-value/index.md#T). |
| [ValueChange](-value-change/index.md) | `data class ValueChange<T> : `[`Change`](-change.md)<br>Describes the update of a value. |
| [Watchable](-watchable/index.md) | `interface Watchable<out C : `[`Change`](-change.md)`>`<br>An object that allows you to watch for changes of type [C](-watchable/index.md#C). |
| [WatchableBase](-watchable-base/index.md) | `abstract class WatchableBase<C : `[`Change`](-change.md)`> : `[`Watchable`](-watchable/index.md)`<`[`C`](-watchable-base/index.md#C)`>`<br>Base for an object that generates change events of type [C](-watchable-base/index.md#C) as its underlying data changes. |
| [WatchableGroup](-watchable-group/index.md) | `class WatchableGroup : `[`Watchable`](-watchable/index.md)`<`[`GroupChange`](-group-change/index.md)`>`<br>A group of [Watchable](-watchable/index.md) objects that can be watched for any change, which arrives as a [GroupChange](-group-change/index.md). |
| [WatchableList](-watchable-list/index.md) | `class WatchableList<T> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-watchable-list/index.md#T)`>, `[`T`](-watchable-list/index.md#T)`, `[`MutableList`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-list/index.html)`<`[`T`](-watchable-list/index.md#T)`>, `[`ListChange`](-list-change/index.md)`<`[`T`](-watchable-list/index.md#T)`>>, `[`ReadOnlyWatchableList`](-read-only-watchable-list.md)`<`[`T`](-watchable-list/index.md#T)`>`<br>A [Watchable](-watchable/index.md) wrapper for a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) which may also be modified or bound. Use [watchableListOf](watchable-list-of.md) to create. |
| [WatchableMap](-watchable-map/index.md) | `class WatchableMap<K, V> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`V`](-watchable-map/index.md#V)`, `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`MapChange`](-map-change/index.md)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>>, `[`ReadOnlyWatchableMap`](-read-only-watchable-map.md)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>`<br>A [Watchable](-watchable/index.md) wrapper for a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may also be modified or bound. Use [watchableMapOf](watchable-map-of.md) to create. |
| [WatchableSet](-watchable-set/index.md) | `class WatchableSet<T> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-watchable-set/index.md#T)`>, `[`T`](-watchable-set/index.md#T)`, `[`MutableSet`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-set/index.html)`<`[`T`](-watchable-set/index.md#T)`>, `[`SetChange`](-set-change/index.md)`<`[`T`](-watchable-set/index.md#T)`>>, `[`ReadOnlyWatchableSet`](-read-only-watchable-set.md)`<`[`T`](-watchable-set/index.md#T)`>`<br>A [Watchable](-watchable/index.md) wrapper for a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may also be modified or bound. Use [watchableSetOf](watchable-set-of.md) to create. |
| [WatchableValue](-watchable-value/index.md) | `class WatchableValue<T> : `[`MutableWatchableBase`](-mutable-watchable-base/index.md)`<`[`Value`](-value/index.md)`<`[`T`](-watchable-value/index.md#T)`>, `[`T`](-watchable-value/index.md#T)`, `[`MutableValue`](-mutable-value/index.md)`<`[`T`](-watchable-value/index.md#T)`>, `[`ValueChange`](-value-change/index.md)`<`[`T`](-watchable-value/index.md#T)`>>, `[`ReadOnlyWatchableValue`](-read-only-watchable-value/index.md)`<`[`T`](-watchable-value/index.md#T)`>`<br>A [Watchable](-watchable/index.md) value of [T](-watchable-value/index.md#T) which may also be replaced or bound. Use [watchableValueOf](watchable-value-of.md) to create. |
| [Watcher](-watcher/index.md) | `interface Watcher`<br>An ongoing watch operation that can be closed or cancelled. |

### Extensions for External Classes

| Name | Summary |
|---|---|
| [kotlin.collections.Collection](kotlin.collections.-collection/index.md) |  |
| [kotlin.collections.Map](kotlin.collections.-map/index.md) |  |
| [kotlinx.coroutines.CoroutineScope](kotlinx.coroutines.-coroutine-scope/index.md) |  |

### Functions

| Name | Summary |
|---|---|
| [group](group.md) | `fun <C : `[`Change`](-change.md)`> group(vararg watchables: `[`Watchable`](-watchable/index.md)`<`[`C`](group.md#C)`>): `[`WatchableGroup`](-watchable-group/index.md)<br>Create and return a group of watchable objects that itself is watchable. |
| [toWatchableValue](to-watchable-value.md) | `fun <T> `[`T`](to-watchable-value.md#T)`.toWatchableValue(): `[`WatchableValue`](-watchable-value/index.md)`<`[`T`](to-watchable-value.md#T)`>`<br>Convert this [T](to-watchable-value.md#T) to a watchable value of [T](to-watchable-value.md#T). |
| [watchableListOf](watchable-list-of.md) | `fun <T> watchableListOf(vararg values: `[`T`](watchable-list-of.md#T)`): `[`WatchableList`](-watchable-list/index.md)`<`[`T`](watchable-list-of.md#T)`>`<br>Return a new [WatchableList](-watchable-list/index.md) containing [values](watchable-list-of.md#io.gladed.watchable$watchableListOf(kotlin.Array((io.gladed.watchable.watchableListOf.T)))/values). |
| [watchableMapOf](watchable-map-of.md) | `fun <K, V> watchableMapOf(vararg values: `[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](watchable-map-of.md#K)`, `[`V`](watchable-map-of.md#V)`>): `[`WatchableMap`](-watchable-map/index.md)`<`[`K`](watchable-map-of.md#K)`, `[`V`](watchable-map-of.md#V)`>`<br>Return a new [WatchableMap](-watchable-map/index.md) containing a map of [values](watchable-map-of.md#io.gladed.watchable$watchableMapOf(kotlin.Array((kotlin.Pair((io.gladed.watchable.watchableMapOf.K, io.gladed.watchable.watchableMapOf.V)))))/values). |
| [watchableSetOf](watchable-set-of.md) | `fun <T> watchableSetOf(vararg values: `[`T`](watchable-set-of.md#T)`): `[`WatchableSet`](-watchable-set/index.md)`<`[`T`](watchable-set-of.md#T)`>`<br>Return a new [WatchableSet](-watchable-set/index.md) containing [values](watchable-set-of.md#io.gladed.watchable$watchableSetOf(kotlin.Array((io.gladed.watchable.watchableSetOf.T)))/values). |
| [watchableValueOf](watchable-value-of.md) | `fun <T> watchableValueOf(value: `[`T`](watchable-value-of.md#T)`): `[`WatchableValue`](-watchable-value/index.md)`<`[`T`](watchable-value-of.md#T)`>`<br>Return a new [WatchableValue](-watchable-value/index.md) wrapping [value](watchable-value-of.md#io.gladed.watchable$watchableValueOf(io.gladed.watchable.watchableValueOf.T)/value). |
